--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/node": "^17.0.1",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
